# brewkit

./: .gitignore  AGENTS.md  README.md  deno.jsonc  tea.yaml
.github/modify-pantry/: action.yml
.github/setup-pantry/: action.yml
.github/workflows/: cd.vx.yml  cd.yml  ci.actions.yml  ci.cli.yml  ci.yml  shellcheck.yml
actions/bottle/: action.yml  bottle.ts
actions/cache/: action.yml
actions/codesign/: action.yml
actions/fetch-pr-artifacts/: action.yml  fetch-pr-artifacts.ts
actions/get-platform/: action.yml  get-platform.ts
actions/has-artifacts/: action.yml  (+1 more)
audit/: action.yml  audit.ts
bottle/: action.yml
download-build-artifact/: action.yml
id/: action.yml  id.ts
lib/: Unarchiver.ts  config.ts  init().ts  pkgx.ts  repair.ts  resolve-pkg.ts  tea.ts  useCache.test.ts  useCache.ts  useGitHubAPI.ts  useGitLabAPI.ts  usePantry.getScript.ts  usePantry.getVersions.test.ts  usePantry.getVersions.ts  usePantry.ts  useSourceUnarchiver.ts  utils.ts
libexec/: .find-pkgx  audit.ts  autoconf  automake  available.ts  bklibcvenv  bkpyvenv  bkwinvenv  curl  deps.ts  extract.ts  fetch.ts  find.ts  fix-shebangs.ts  fixup.ts  git  init.ts  install  install.ts  inventory.ts  libtool  link.ts  make  patch  peek.sh  perl  pkg-config  pkgx  python-venv-stubber.sh  python-venv.py  query.ts  resolve.ts  sample-blend.rb  search.ts  sed  sort.ts  stage-test.ts  stage.ts  test.ts
projects/pyapp.com/poetry/: package.yml  pyproject.toml
scripts/: publish-release.sh
share/: TEMPLATE.pkg.yml
test/: action.yml  test.ts
upload-build-artifact/: action.yml
(+79 files in other folders)
