[tool.poetry]
name = "myapp"
version = "1.0.0"
authors = ['foo']
description = 'bar'

[tool.poetry.scripts]
myapp = 'myapp.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12" # updated for llama-index dependency
requests = '*'
